--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorBackground">#dfd4d8</color>
+    <color name="colorOrange">#ff8e55</color>
+    <color name="colorXam">#beb4b0</color>
+
 </resources>
